# spending-tracker

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_plaid_item_state.py  0003_recategorize_taxonomy.py  0004_merge_travel_transportation.py  0005_drop_recurring_finder_tables.py  0006_subscriptions.py  0007_notifications.py  0008_cards.py  0009_transaction_card.py  0010_reward_profiles.py
backend/app/: main.py  worker.py
backend/app/api/: cards.py  categories.py  finder.py  health.py  imports.py  ingest.py  insights.py  notifications.py  plaid.py  receipts.py  recurring.py  reviews.py  rewards.py  schemas.py  subscriptions.py  transactions.py
backend/app/core/: auth.py  config.py  db.py  secrets.py  taxonomy.py
backend/app/models/: __init__.py  base.py  enums.py  tables.py
backend/app/services/: images.py  (+17 more)
backend/tests/: conftest.py  test_apple_card_csv.py  test_auth.py  test_auto_sync.py  test_categorize.py  test_classify.py  test_comparable.py  test_config_cors.py  test_extract.py  test_finder.py  test_health.py  test_images.py  test_imports.py  test_ingest_reconcile.py  test_notifications_api.py  test_plaid_sync.py  test_pricing.py  test_recat_migration.py  test_reconcile.py  test_recurring.py  test_recurring_api.py  test_reviews.py  test_rewards.py  test_rewards_api.py  test_rls_smoke.py  test_route_inventory.py  test_subscription_enrich.py  test_subscription_monitor.py  test_subscriptions.py  test_subscriptions_api.py
(+72 files in other folders)
